# VarroaPopLinux

./: .gitignore  Adult.cpp  Adult.h  Bee.cpp  Bee.h  ColdStorageSimulator.cpp  ColdStorageSimulator.h  Colony.cpp  Colony.h  GlobalOptions.cpp  GlobalOptions.h  Matrix.cpp  Matrix.h  Mite.cpp  Mite.h  Queen.cpp  Queen.h  README.md  VarroaPop.rc  VarroaPop.sln  VarroaPop.vcxproj  VarroaPop.vcxproj.filters  VarroaPopDoc.cpp  VarroaPopDoc.h  VarroaPopSession.cpp  VarroaPopSession.h  WeatherEvents.cpp  WeatherEvents.h  WeatherGridData.cpp  WeatherGridData.h  aaaaObjective of this build.txt
Linux/: CMakeLists.txt  CMakeSettings.json  DaylightHoursAndTransitionCount.ipynb  README.md  main.cpp  run-cold-storage-simulations-historical.bat  run-cold-storage-simulations.bat  run-simulations.py  setup.py  varroapopcmdbridge.cpp  varroapopcmdbridge.h  vpanalysis.py
Linux/datamodel/: CMakeLists.txt.template
Linux/portcode/: CMakeLists.txt  afx.h  carchive.cpp  carchive.h  carray.cpp  carray.h  carray.inline.h  ccmdtarget.cpp  ccmdtarget.h  cdialog.cpp  cdialog.h  cfile.cpp  cfile.h  cmapstringtoob.cpp  cmapstringtoob.h  cobject.cpp  cobject.h  coblist.cpp  coblist.h  coledatetime.cpp  coledatetime.h  compat.h  cptrlist.cpp  cptrlist.h  cptrlist.inline.h  cstring.cpp  cstring.format.h  cstring.h  cstringarray.cpp  cstringarray.h  ctime.cpp  ctime.h  cuintarray.cpp  cuintarray.h  position.cpp  position.h  stdafx.cpp  stdafx.h  varroapop.cpp  varroapop.h
Linux/scripts/: cold-storage-simulations.py  plots.html  plots.py  simulations.py  utilities.py
Linux/tests/: CMakeLists.txt  data.lzma  main.cpp  test_carchive.cpp  test_carray.cpp  test_cfile.cpp  test_cmapstringtoob.cpp  test_coblist.cpp  test_coledatetime.cpp  test_cptrlist.cpp  test_cstring.cpp  test_cstringarray.cpp  test_cstringlist.cpp  test_ctime.cpp  test_cuintarray.cpp  test_globaloptions.cpp  test_temperaturedata.cpp  test_varroapop.cpp
Linux/tests/helpers/: common.cpp  common.h  myobject.cpp  myobject.h
Simulations/: NewForagingModel.R  Simulate.py  limited_locations.csv  parameters.json  plot.py
Simulations/ObservedHistoricalBinary/: data_46.03125_-118.34375  data_46.28125_-119.34375  data_47.40625_-120.34375  data_48.40625_-119.53125
Simulations/Rcp85Binary/: data_46.03125_-118.34375  data_46.28125_-119.34375  data_47.40625_-120.34375  data_48.40625_-119.53125
Simulations/VarroaPy/VarroaPy/: RunVarroaPop.py  Tools.py
Simulations/VarroaPy/VarroaPy/files/exe/: .gitignore
Simulations/VarroaPy/VarroaPy/files/weather/: .gitignore
